--- a/game.html
+++ b/game.html
@@ -14,9 +14,9 @@
             <span class="stat">Gold <strong><span class="goldText">50</span></strong></span>
         </div>
         <div class="controls">
-            <button id="button1"></button>
-            <button id="button2"></button>
-            <button id="button3"></button>
+            <button id="button1">General Store</button>
+            <button id="button2">Fight Room</button>
+            <button id="button3">Gamble</button>
         </div>
     </div>
 </body>
